--- a/src/images/ImageViewerFrame.form
+++ b/src/images/ImageViewerFrame.form
@@ -50,6 +50,8 @@
                   <Component id="jspinY" min="-2" pref="75" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jcbxFlattened" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jlblImage" min="-2" pref="55" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -66,6 +68,7 @@
                               <Component id="jspinX" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jspinY" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jcbxFlattened" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="0" pref="23" max="32767" attributes="0"/>
                       </Group>
@@ -100,6 +103,14 @@
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlblImage">
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="jcbxFlattened">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Flatten Color Space"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbxFlattenedActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
