--- a/src/images/ImageViewerFrame.form
+++ b/src/images/ImageViewerFrame.form
@@ -45,14 +45,14 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jspinX" min="-2" pref="75" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jspinY" min="-2" pref="75" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jspinX" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jspinY" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jcbxSourceImages" min="-2" pref="129" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jcbxFlattened" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="59" max="32767" attributes="0"/>
                   <Component id="jlblImage" min="-2" pref="55" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -67,10 +67,10 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jspinX" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jspinY" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jcbxFlattened" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jcbxSourceImages" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="0" pref="23" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="26" max="32767" attributes="0"/>
                       </Group>
                       <Component id="jlblImage" max="32767" attributes="0"/>
                   </Group>
@@ -100,14 +100,6 @@
             <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jspinYStateChanged"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Show"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JLabel" name="jlblImage">
         </Component>
         <Component class="javax.swing.JCheckBox" name="jcbxFlattened">
@@ -117,6 +109,41 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbxFlattenedActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jcbxSourceImages">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="21">
+                <StringItem index="0" value="Train 1"/>
+                <StringItem index="1" value="Train 2"/>
+                <StringItem index="2" value="Train 3"/>
+                <StringItem index="3" value="Train 4"/>
+                <StringItem index="4" value="Train 5"/>
+                <StringItem index="5" value="Train 6"/>
+                <StringItem index="6" value="Train 7"/>
+                <StringItem index="7" value="Train 8"/>
+                <StringItem index="8" value="Train 9"/>
+                <StringItem index="9" value="Test 0"/>
+                <StringItem index="10" value="Test 1"/>
+                <StringItem index="11" value="Test 2"/>
+                <StringItem index="12" value="Test 3"/>
+                <StringItem index="13" value="Test 4"/>
+                <StringItem index="14" value="Test 5"/>
+                <StringItem index="15" value="Test 6"/>
+                <StringItem index="16" value="Test 7"/>
+                <StringItem index="17" value="Test 8"/>
+                <StringItem index="18" value="Test 9"/>
+                <StringItem index="19" value=" "/>
+                <StringItem index="20" value=" "/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbxSourceImagesActionPerformed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
@@ -130,7 +157,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="379" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="382" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
